feature/DPAV-1513- fixed sonar review comments 3